--- a/EmlakOfisi/Views/Account/Login.cshtml
+++ b/EmlakOfisi/Views/Account/Login.cshtml
@@ -38,18 +38,18 @@
                     @Html.ValidationMessage("",new { style= "text-align: center; display: block; color: red;" })
 
 
-                    <div class="wrap-input100 validate-input" data-validate="Kullanıcı Adını Giriniz">
-                        @Html.ValidationMessageFor(x => x.User.UserName)
-                        @Html.DisplayFor(x => x.User.UserName)
-                        @Html.TextBoxFor(x => x.User.UserName, new { @class = "input100", placeholder = "Kullanıcı Adı" })
-                        <span class="focus-input100" data-placeholder="&#xe82a;"></span>
-                    </div>
-                    <div class="wrap-input100 validate-input" data-validate="Şifreyi Giriniz">
-                        @Html.ValidationMessageFor(x => x.User.Password)
-                        @Html.DisplayFor(x => x.User.Password)
-                        @Html.TextBoxFor(x => x.User.Password, new { @class = "input100", placeholder = "Şifre" ,type="password"})
-                        <span class="focus-input100" data-placeholder="&#xe80f;"></span>
-                    </div>
+            <div class="wrap-input100 validate-input" data-validate="Kullanıcı Adını Giriniz">
+                @Html.ValidationMessageFor(x => x.User.UserName)
+                @Html.DisplayFor(x => x.User.UserName)
+                @Html.TextBox("UserName",null, new { @class = "input100", placeholder = "Kullanıcı Adı" })
+                <span class="focus-input100" data-placeholder="&#xe82a;"></span>
+            </div>
+            <div class="wrap-input100 validate-input" data-validate="Şifreyi Giriniz">
+                @Html.ValidationMessageFor(x => x.User.Password)
+                @Html.DisplayFor(x => x.User.Password)
+                @Html.TextBox("Password", null, new { @class = "input100", placeholder = "Şifre", type = "password" })
+                <span class="focus-input100" data-placeholder="&#xe80f;"></span>
+            </div>
 
                     <div class="container-login100-form-btn m-t-32">
                         <button class="login100-form-btn">
